--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
 <body>
   <div id="root"></div>
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script> -->
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
